hphp/hack/test/typecheck/reactive/rx_of_scope2.php.exp
File "rx_of_scope2.php", line 5, characters 5-15:
<<__RxOfScope>> attribute is only allowed on lambdas. (Naming[2090])
