hphp/hack/test/typecheck/reactive/rx_of_scope2.php
<?hh

class A {
  // ERROR
  <<__RxOfScope>>
  public function f(): void {
  }
}
